--- a/src/app/Gamestore/User/VideoJuegosHome/VideoJuegosHome.component.html
+++ b/src/app/Gamestore/User/VideoJuegosHome/VideoJuegosHome.component.html
@@ -9,7 +9,7 @@
 
     <mat-form-field style="margin-left: 3%;" class="SelectGenero">
         <mat-select placeholder="Genero" [(ngModel)]="SelectionGene" (selectionChange)="applyFilter()" >
-            <mat-option *ngFor="let gen of GenerosList" value="{{gen.id}}">
+            <mat-option *ngFor="let gen of GenerosList" value="{{gen.genId}}">
                 {{gen.nombre}}
             </mat-option>
         </mat-select>
@@ -27,10 +27,7 @@
         <mat-icon style="color: black;">clear_all</mat-icon>
     </button> 
 
-    <button mat-button class="btn-buy" title="edit" (click)="DetalleCarritoModal()" >
-        <mat-icon style="color: black;">shopping_cart</mat-icon>
-        {{acumulador| number: '1.2-2'}}
-    </button> 
+    
 </div>
 <mat-grid-list cols="4" rowHeight="250px">
     <mat-grid-tile class="grilla" 
