--- a/src/app/Gamestore/User/modal_juego/detalle-compra/detalle-compra.component.css
+++ b/src/app/Gamestore/User/modal_juego/detalle-compra/detalle-compra.component.css
@@ -1,6 +1,9 @@
 .example-container {
     display: flex;
     flex-direction: column;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(76, 79, 79, 0.718)
     
     
   }
@@ -16,11 +19,52 @@
   .example-header {
     min-height: 64px;
     width: 90%;
-    padding: 8px 24px 0;
+    padding: 3px 10px 0;
   }
 
   .portada{
     width: 60%;
     height:90%;
     max-height: fit-content;
+}
+
+/*Estilos de material*/
+.mdc-dialog__container{
+width: 100%;
+}
+
+.mdc-data-table__table {
+  /* Estilos personalizados aquí */
+  background-color: #f2f2f2;
+  border: 3px solid black;
+  white-space: nowrap;
+  min-width: 95%;
+  max-height: 98%;
+  overflow-y: auto;
+  margin-left: 1%;
+  margin-right: 1%
+  /* Otros estilos que desees aplicar */
+}
+
+.mdc-data-table__header-cell{
+  padding: 0,0,0,0;
+  text-align: center;
+  
+}
+
+.mdc-data-table__cell, .mdc-data-table__header-cell {
+  padding: 0 0px 0 0px;
+  padding-left: 5px;
+  
+}
+
+.mat-mdc-dialog-container .mdc-dialog__surface {
+  background-color: rgba(76, 79, 79, 0.718)
+}
+
+.mat-mdc-dialog-container .mdc-dialog__surface {
+  background-color: var(--mdc-dialog-container-color, rgba(76, 79, 79, 0.718));
+}
+.mat-mdc-dialog-surface .mdc-dialog__surface{
+  background-color: rgba(76, 79, 79, 0.718)
 }
