--- a/src/app/Gamestore/Admin/index-admin/index-admin.component.html
+++ b/src/app/Gamestore/Admin/index-admin/index-admin.component.html
@@ -28,8 +28,9 @@
       <mat-sidenav-content>
         
         <mat-toolbar color="primary" class="example-toolbar">
-
+         
           <button mat-button (click)="sidenav.toggle()" style="float: left;"><mat-icon>home</mat-icon></button>
+          <p>{{username}}</p>
           <img src="../../../../assets/logo_barra.jpg" class="img-logo" >
           <p class="example-spacer" >GameStore</p>
           
