--- a/src/app/Gamestore/User/index-user/index-user.component.html
+++ b/src/app/Gamestore/User/index-user/index-user.component.html
@@ -37,7 +37,7 @@
          
 
           <button mat-button (click)="sidenav.toggle()" style="float: left;"><mat-icon>home</mat-icon></button>
-
+          <p>{{username}}</p>
           <button mat-button class="btn-buy" title="carrito" (click)="DetalleCarritoModal()" >
             <mat-icon style="color: black;margin-right: 2%;">shopping_cart</mat-icon>
             <p style="margin-left: 1%;">{{acumulador| number: '1.2-2'}}</p>
