--- a/src/app/Gamestore/Admin/crud-usuarios/crud-usuarios.component.html
+++ b/src/app/Gamestore/Admin/crud-usuarios/crud-usuarios.component.html
@@ -18,7 +18,7 @@
       <!-- Name Column -->
       <ng-container matColumnDef="user">
         <mat-header-cell *matHeaderCellDef> Usuario </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.user}} </mat-cell>
+        <mat-cell *matCellDef="let element"> {{element.username}} </mat-cell>
       </ng-container>
   
       <!-- Weight Column -->
