--- a/src/app/Gamestore/Admin/crud-vj/crud-vj.component.html
+++ b/src/app/Gamestore/Admin/crud-vj/crud-vj.component.html
@@ -71,5 +71,10 @@
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
       <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
     </mat-table>
+    <mat-paginator style="" #paginator
+                 [pageSize]="7"
+                 [pageSizeOptions]="[7, 10, 15]"
+                 [showFirstLastButtons]="true">
+  </mat-paginator>
   </div>
   </div>
