--- a/src/app/login/logueo/logueo.component.css
+++ b/src/app/login/logueo/logueo.component.css
@@ -17,10 +17,11 @@
     padding: 2rem 3rem;
     margin: auto;
     border-radius: 2.5rem;
-    background-color: #50a5e6;
+    background-color: rgb(144, 39, 39);
     box-shadow: 13px 13px 20px #cbced1, -13px -13px 20px #ffffff;
     color: black;
     margin-top: 10rem;
+    text-align: center;
   }
   .custom-form input {
     display: block;
