--- a/src/app/Gamestore/Admin/crud-vj/crud-vj.component.css
+++ b/src/app/Gamestore/Admin/crud-vj/crud-vj.component.css
@@ -34,14 +34,13 @@
     background-color: #f2f2f2;
     border: 1px solid #ccc;
     white-space: nowrap;
-    min-width: 83%;
-
+    min-width: 80%;
     margin-left: 1%;
     margin-right: 1%
     /* Otros estilos que desees aplicar */
   }
 
-  .mdc-data-table__header-cell{
+.mdc-data-table__header-cell{
     padding: 0,0,0,0;
 }
 
@@ -64,4 +63,9 @@
   height: 1.125rem;
   width: 1.125rem;
 } 
+
+.imgTabla{
+  width: 60%;
+  height: 80%;
+}
 
