--- a/src/app/Gamestore/User/video-consolas-home/video-consolas-home.component.html
+++ b/src/app/Gamestore/User/video-consolas-home/video-consolas-home.component.html
@@ -1,5 +1,13 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
-<div class="body">
+
+<div class="d-flex justify-content-center align-items-center" *ngIf="preloaderTime" 
+>
+
+    <img src="../../../../assets/utils/pacman.gif" alt="pacman andando" style="width: 300px;height: 220px;"> 
+    
+  
+</div>
+<div class="body" *ngIf="!preloaderTime">
 <br>
 <div class="footer">
     <h1 style="margin-left: 2%;">VideoJuegos Disponibles</h1>
