--- a/src/app/Gamestore/User/VideoJuegosHome/Card-Videojuego/detalle-juego.component.html
+++ b/src/app/Gamestore/User/VideoJuegosHome/Card-Videojuego/detalle-juego.component.html
@@ -10,7 +10,7 @@
       <mat-card-title>{{x.nombre}}</mat-card-title>
       <mat-card-subtitle>{{x.precio|euros}}</mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image class="portada" [src]="x.img" alt="Photo of a Shiba Inu">
+    <img mat-card-image class="portada" src="../../../../../assets/PortadasVj/{{x.img}}" alt="Photo of a Shiba Inu">
     <mat-card-content class="texto-card">
       <p>
         {{x.descripcion}}
