--- a/src/app/Gamestore/User/VideoJuegosHome/VideoJuegosHome.component.css
+++ b/src/app/Gamestore/User/VideoJuegosHome/VideoJuegosHome.component.css
@@ -19,51 +19,34 @@
     max-width: 14%;
 }
 
-.btn-buy{
-    background-color: aliceblue;
-    float: right;
-    margin-right: 5%;
-}
-
 .grilla{
     display: table-column;
     margin-bottom: 5%;
  
 }
 
-.portada{
-    width: 100%;
-    height: 90%;
-}
+
 
 .card{
-    height: 90%;
-    width: 90%;
-    display: flex;
-    justify-content: center;
+    height: 100%;
+    width: 60%;
+    
     cursor: pointer;
     border:  black;
     border-radius: 10px;
-    
-    
-    
-    
+    background-color:rgb(144, 39, 39)
 }
 
 .card:hover{
     opacity: 80%;
     
 }
-
-.figura{
-    justify-content: center;
-    
-    height: 90%;
-    width: 100%;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
+.portada{
+    width: 80%;
+    height: 65%;
+    margin-top: 1%;
+   
 }
-
 .descrip{
-    margin-left: 30%;
+    margin-left: 15%;
 }
