--- a/src/app/Gamestore/User/VideoJuegosHome/VideoJuegosHome.component.html
+++ b/src/app/Gamestore/User/VideoJuegosHome/VideoJuegosHome.component.html
@@ -1,5 +1,6 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
 
+
 <div class="d-flex justify-content-center align-items-center" *ngIf="preloaderTime">
 
     <img src="../../../../assets/utils/loading.gif" alt="Pikachu andando">
@@ -35,28 +36,36 @@
 
     
 </div>
-<mat-grid-list cols="4" rowHeight="250px">
-    <mat-grid-tile class="grilla" 
-        *ngFor="let tile of tiles"
-        [colspan]="1"
-        [rowspan]="2"
-        
-        >
+<mat-grid-list cols="5" rowHeight="250px" >
+    <mat-grid-tile class="grilla" *ngFor="let tile of tiles" [colspan]="1" [rowspan]="1" >
 
-        <div class="card" style="background-color:rgb(253, 212, 217) ;" (click)="DetalleModal(tile)">
-            <figure class="figura" >
-                <img class="portada" src="{{tile.img}}">
+        <div class="card" style="
+        height: 100%; width: 80%;
+        display: flex;
+        flex-direction: column;
+        justify-self: center;
+        cursor: pointer;
+        border:  black;
+        border-radius: 10px;
+        background-color:rgb(144, 39, 39);
+        margin-bottom: 3%;
+        
+        "
+        (click)="DetalleModal(tile)">
+
+            
+                <img class="portada" src="../../../../assets/PortadasVj/{{tile.img}}" style="
+                width: 80%;
+                height: 65%;
+                margin-left: 5%;
+                margin-top: 4%;" >
                 <br>
-                <div class="descrip">
+                <div class="descrip" style="text-align: center;">
                     {{tile.nombre}}
                     <br>
                     {{tile.precio|euros}} 
                 </div>
                 
-                
-            </figure>
-            
-
         </div>
        
       
