--- a/src/app/Gamestore/Admin/crud-vj/crud-vj.component.html
+++ b/src/app/Gamestore/Admin/crud-vj/crud-vj.component.html
@@ -41,7 +41,7 @@
       <ng-container matColumnDef="plataformas">
         <mat-header-cell *matHeaderCellDef> Plataformas </mat-header-cell>
         <mat-cell *matCellDef="let element" > 
-          <p [textContent]="plataformasConvert(element.plataformas)"></p>
+       {{ element.plataformas|plataformPipe}}
          
         </mat-cell>
       </ng-container>
