--- a/src/app/Gamestore/Admin/crud-vj/crud-vj.component.html
+++ b/src/app/Gamestore/Admin/crud-vj/crud-vj.component.html
@@ -39,7 +39,7 @@
   
       
       <ng-container matColumnDef="plataformas">
-        <mat-header-cell *matHeaderCellDef> Plataformas </mat-header-cell>
+        <mat-header-cell *matHeaderCellDef style=" word-wrap: break-word;"> Plataformas </mat-header-cell>
         <mat-cell *matCellDef="let element" > 
        {{ element.plataformas|plataformPipe}}
          
