--- a/src/app/Gamestore/User/VideoJuegosHome/Card-Videojuego/detalle-juego.component.html
+++ b/src/app/Gamestore/User/VideoJuegosHome/Card-Videojuego/detalle-juego.component.html
@@ -6,11 +6,11 @@
 
 <mat-card class="example-card">
     <mat-card-header>
-      <div mat-card-avatar class="example-header-image" style=" background-image: url('{{x.img}}');"></div>
+      <div mat-card-avatar class="example-header-image" style=" background-image: url('../../../../../../assets/PortadasVj/{{x.img}}');"></div>
       <mat-card-title>{{x.nombre}}</mat-card-title>
       <mat-card-subtitle>{{x.precio|euros}}</mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image class="portada" src="../../../../../assets/PortadasVj/{{x.img}}" alt="Photo of a Shiba Inu">
+    <img mat-card-image class="portada" src="../../../../../../assets/PortadasVj/{{x.img}}" alt="Photo of a Shiba Inu">
     <mat-card-content class="texto-card">
       <p>
         {{x.descripcion}}
