--- a/src/app/Gamestore/User/index-user/index-user.component.css
+++ b/src/app/Gamestore/User/index-user/index-user.component.css
@@ -162,6 +162,20 @@ width: 100%;
 
 .footer{
   width: 100%;
+  height: 5%;
   margin-top: 5%;
-  background-color:  rgb(182, 23, 23);;
+  background-color:  rgb(182, 23, 23);
+  position: fixed;
+  left: 0;
+  bottom: 0;
+}
+
+.imagenFooter{
+  width: 2%;
+  height: 100%;
+}
+
+.btnFooter{
+  float: right;
+  white-space: break-spaces;
 }
