--- a/src/app/Gamestore/User/index-user/index-user.component.html
+++ b/src/app/Gamestore/User/index-user/index-user.component.html
@@ -98,7 +98,15 @@
           <!-- Pagina a la que se llama -->
         <router-outlet (click)="sidenav.toggle()" style="margin-top: 3%;"></router-outlet>
 
-        <footer  class="footer" >Esto es el footer</footer>
+        <footer  class="footer" >
+          <div class="btnFooter">
+          <a href="https://es-es.facebook.com/"><i class="bi bi-facebook" style="color: black;"></i></a>
+          <a href="https://es-es.facebook.com/"><i class="bi bi-instagram" style="color: black;"></i></a>
+          <a href="https://es-es.facebook.com/"><i class="bi bi-twitter" style="color: black;"></i></a>
+          <a href="https://es-es.facebook.com/"><i class="bi bi-twitch" style="color: black;"></i></a>
+        </div>
+          
+        </footer>
       </mat-sidenav-content>
    
      
