--- a/src/app/Gamestore/User/index-user/index-user.component.html
+++ b/src/app/Gamestore/User/index-user/index-user.component.html
@@ -43,7 +43,7 @@
             <mat-icon style="color: black;margin-right: 0.5%;">shopping_cart</mat-icon>
          </button>
          <p style="margin-top: 1%;">{{acumulador| number: '1.2-2'}}</p>
-
+          
           <img src="../../../../assets/logo_barra.jpg" class="img-logo" >
           <p class="example-spacer" >GameStore</p>
           
@@ -77,7 +77,7 @@
         </div>
 
           <!-- Div del carrusel de imagenes -->
-        <div  class="divCarrusel" >
+        <div  class="divCarrusel" style="height: 30%;">
           <ngb-carousel [interval]="1500" [animation]="true">
 
             <ng-template ngbSlide>
@@ -100,11 +100,11 @@
 
         <footer  class="footer" >
           <div class="btnFooter">
-          <a href="https://es-es.facebook.com/"><i class="bi bi-facebook" style="color: black;"></i></a>
-          <a href="https://es-es.facebook.com/"><i class="bi bi-instagram" style="color: black;"></i></a>
-          <a href="https://es-es.facebook.com/"><i class="bi bi-twitter" style="color: black;"></i></a>
-          <a href="https://es-es.facebook.com/"><i class="bi bi-twitch" style="color: black;"></i></a>
-        </div>
+          <a href="https://es-es.facebook.com/"><i class="bi bi-facebook" style="color: black;margin-right: 2%;"></i></a>
+          <a href="https://es-es.facebook.com/"><i class="bi bi-instagram" style="color: black;margin-right: 2%;"></i></a>
+          <a href="https://es-es.facebook.com/"><i class="bi bi-twitter" style="color: black;margin-right: 2%;"></i></a>
+          <a href="https://es-es.facebook.com/"><i class="bi bi-twitch" style="color: black;margin-right: 2%;"></i></a>
+         </div>
           
         </footer>
       </mat-sidenav-content>
